added test case for javadoc snippet tag